--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,7 +18,13 @@ const { title, description, image = '/social_img.webp', ogType = 'website' } = A
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
-<meta name="google-site-verification" content="G_dtQLhL7IxZGT5wbpTitkD0g7hgKGcBlfg2qDUs1h0" />
+<meta name="google-site-verification" content="G_dtQLhL7IxZGT5wbpTitkD0g7hgKGcBlfg2qDUs1h0" /><!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M72CNPRX');</script>
+<!-- End Google Tag Manager -->
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
