--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -4,13 +4,6 @@
 </div>
 
 <div class="social-icons px-4 pb-5 pt-1 flex self-center justify-center sticky bottom-0 bg-base-200">
-    <a
-        href="https://manuelernestog.github.io/support-my-work/"
-        target="_blank"
-        class="mx-3"
-        aria-label="Support my work"
-        title="Support my work"
-    >
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -24,7 +17,7 @@
             ></path></svg
         >
     </a>
-    <a href="https://github.com/manuelernestog" target="_blank" class="mx-3" aria-label="Github" title="Github">
+    <a href="https://github.com/minami-1" target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -38,7 +31,7 @@
             ></path>
         </svg>
     </a>
-    <a href="https://twitter.com/manuelernestog" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
+    <a href="https://twitter.com/ImohImoh43" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -50,8 +43,8 @@
             ></path>
         </svg>
     </a>
-    <a
-        href="https://www.linkedin.com/in/manuelernestogr"
+    <ahttps://www.linkedin.com/in/imoh-joseph-849a5a328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+        href="https://"
         target="_blank"
         class="mx-3"
         aria-label="Linkedin"
