--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,12 +4,12 @@ const today = new Date();
 
 <footer class="footer footer-center block mb-5 pt-10">
   <div class="pb-2">
-    &copy; {today.getFullYear()} Manuel Ernesto
+    &copy; {today.getFullYear()} Imoh Joseph
   </div>
   <div class="inline opacity-75">
-    Developed by <a href="https://manuelernestog.github.io" target="_blank" class="font-bold">Manuel Ernesto</a> using
+    Developed by <a href="https://www.linkedin.com/in/imoh-joseph-849a5a328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="font-bold">Imoh Joseph</a> using
     <!-- Thanks for using this template. You can keep this line to support my work :) -->
-    <a href="https://astrofy-template.netlify.app/" target="_blank" class="font-bold">Astrofy Template ⚡️</a>
+    <a href="https://www.linkedin.com/in/imoh-joseph-849a5a328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app/" target="_blank" class="font-bold">Imoh Joseph ⚡️</a>
   </div>
 </footer>
 <style></style>
