--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,10 +9,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+   I am a dynamic and results-driven Digital Marketing Specialist with a proven track record of crafting and executing successful online marketing strategies. With 3 years of experience, I excel in leveraging SEO, SEM, social media, content marketing, and analytics to drive brand growth, boost engagement, and increase ROI.
+A natural collaborator, I thrive in fast-paced environments where creativity and data come together to achieve tangible results. Skilled in using tools like Google Analytics, AdWords, and social media platforms, I bring a hands-on approach to campaign management while staying updated with the latest industry trends.
+Passionate about connecting businesses with their audiences, I take pride in delivering impactful campaigns that align with company goals. Ready to contribute innovative ideas and dedicated effort to drive your brand's digital presence to new heights.
   </div>
 
   <div class="mb-5">
@@ -21,12 +20,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="Certified Digital Marketer"
+      subtitle=" 2024 at Honeytreat Trade Academy, Ikeja, Nigeria"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="In View"
+      subtitle=" 2022 to Present at JPTS Institute Of Science,Management and Technology,Lagos, Nigeria"
     />
   </div>
 
@@ -36,22 +35,26 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Digital Marketing Specialist"
+      subtitle="2024 at Greenpathsdev,Lagos,Nigeria"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+I designed and implemented targeted digital marketing strategies across multiple social media platforms, resulting in a specific 20% increase in website traffic within three months.
+Managed end-to-end social media campaigns, growing Facebook followers by 10% and boosting engagement rates through consistent and relevant content creation.
+Conducted detailed keyword research and optimized website content for SEO, achieving higher rankings for priority keywords and driving organic traffic growth.
+Analyzed campaign performance using tools like Google Analytics and created actionable reports to inform future strategies, consistently meeting or exceeding KPIs.
+Collaborated with cross-functional teams, including sales and design, to align marketing efforts with overarching business goals.
+Executed successful email marketing campaigns, achieving above-average open and click-through rates by tailoring content to audience segments.
+Stayed ahead of industry trends and applied insights to test new approaches, such as video marketing and influencer collaborations, contributing to brand visibility and credibility.
+Key Achievements:
+Increased lead generation by 10% through effective PPC campaign management on platforms like Google Ads and Facebook Ads.
+Spearheaded a product launch campaign that resulted in achievement, record-breaking $100 in sales within the first month.
+This role allowed me to hone my ability to think creatively, adapt quickly to evolving technologies, and deliver measurable results in a competitive market.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Digital Marketing Specialist"
+      subtitle="2024 at TAC Agidingbi, Ikeja, Nigeria"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
-    </TimeLineElement>
-    <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
-    >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+      Opened, optimized their Google Business Profile and managed their profile.
     </TimeLineElement>
   </div>
 
@@ -73,20 +76,22 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+    <li>Google Analytics</li>
+    <li>Email Marketing</li>
+    <li>Social Media Marketing</li>
+    <li>Search Engine Optimization</li>
+    <li>Social Media Management</li>
+    <li>Lead Generation</li>
+    <li>Google Ads</li>
+    <li>Wordpress Website Development</li>
+    <li> Meta Ads</li>
+    <li>Content Writing</li>
+    <li>Tiktok Ads</li>
+    <li>Snapchat Ads</li>
+    <li>LinkedIn Ads</li>
+    <li>Google Local Service </li>
+    <li>Google Business Profile Optimization</li>
+    <li>Schema Markup</li>
+    <li>Google Tag Manager</li>
   </ul>
 </BaseLayout>
