--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,25 +24,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="text-3xl py-3 font-bold">Digital Marketer</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Astrofy</b> a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS.
-        Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed. I hope you find
-        it useful!
+        This is <b>Imoh Joseph</b>, I'm a dynamic and results-driven Digital Marketing Specialist with a proven track record of crafting and executing successful online marketing strategies. With 3 years of experience, I excel in leveraging SEO, SEM, social media, content marketing, and analytics to drive brand growth, boost engagement, and increase ROI.
+A natural collaborator, I thrive in fast-paced environments where creativity and data come together to achieve tangible results. Skilled in using tools like Google Analytics, AdWords, and social media platforms, I bring a hands-on approach to campaign management while staying updated with the latest industry trends.
+Passionate about connecting businesses with their audiences, I take pride in delivering impactful campaigns that align with company goals. Ready to contribute innovative ideas and dedicated effort to drive your brand's digital presence to new heights.
       </text>
     </div>
     <div class="mt-8">
-      <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
+      <a class="btn" href="https://twitter.com/ImohImoh43" target="_blank"> Let's connect!</a>
       <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
+        Review My Resume
       </a>
     </div>
   </div>
 
   <div>
-    <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
+    <div class="text-3xl w-full font-bold mb-2">My Project {"</>"}</div>
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
+    title="My Blogs"
     img="/post_img.webp"
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
