--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ Passionate about connecting businesses with their audiences, I take pride in del
     </div>
     <div class="mt-8">
       <a class="btn" href="https://twitter.com/ImohImoh43" target="_blank"> Let's connect!</a>
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
+      <a href="https://www.linkedin.com/in/imoh-joseph-849a5a328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="btn btn-outline ml-5">
         Review My Resume
       </a>
     </div>
