--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="text-3xl py-3 font-bold">Digital Marketer</div>
     <div class="py-2">
       <text class="text-lg">
-        This is <b>Imoh Joseph</b>, I'm a dynamic and results-driven Digital Marketing Specialist with a proven track record of crafting and executing successful online marketing strategies. With my experience, I excel in leveraging SEO, SEM, social media, content marketing, and analytics to drive brand growth, boost engagement, and increase ROI.
+        This is <b>Imoh Joseph</b>, I'm a dynamic and results-driven Digital Marketing Specialist with a proven track record of crafting and executing successful online marketing strategies. <br> With my experience, I excel in leveraging SEO, SEM, social media, content marketing, and analytics to drive brand growth, boost engagement, and increase ROI.
 
 <br> A natural collaborator, I thrive in fast-paced environments where creativity and data come together to achieve tangible results.
  <br> Skilled in using tools like Google Analytics, AdWords, and social media platforms, I bring a hands-on approach to campaign management while staying updated with the latest industry trends.
