--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <br> A natural collaborator, I thrive in fast-paced environments where creativity and data come together to achieve tangible results.
  <br> Skilled in using tools like Google Analytics, AdWords, and social media platforms, I bring a hands-on approach to campaign management while staying updated with the latest industry trends.
-Passionate about connecting businesses with their audiences, I take pride in delivering impactful campaigns that align with company goals. Ready to contribute innovative ideas and dedicated effort to drive your brand's digital presence to new heights.
+<br> Passionate about connecting businesses with their audiences, I take pride in delivering impactful campaigns that align with company goals. Ready to contribute innovative ideas and dedicated effort to drive your brand's digital presence to new heights.
       </text>
     </div>
     <div class="mt-8">
