--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <br> A natural collaborator, I thrive in fast-paced environments where creativity and data come together to achieve tangible results.
  <br> Skilled in using tools like Google Analytics, AdWords, and social media platforms, I bring a hands-on approach to campaign management while staying updated with the latest industry trends.
-<br> Passionate about connecting businesses with their audiences, I take pride in delivering impactful campaigns that align with company goals. Ready to contribute innovative ideas and dedicated effort to drive your brand's digital presence to new heights.
+<br> Passionate about connecting businesses with their audiences, I take pride in delivering impactful campaigns that align with company goals. Always ready to contribute innovative ideas and dedicated effort to drive your brand's digital presence to new heights.
       </text>
     </div>
     <div class="mt-8">
@@ -44,25 +44,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 
   <HorizontalCard
-    title="My Blogs"
+    title="Blog 1"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    desc="Breathe Easy,Cost & Tips to Professional Smoke Removal Service."
+    url="https://www.puroclean.com/schwenksville-pa-puroclean-lansdale/blog/breathe-easy-cost-tips-to-professional-smoke-removal-service/"
     badge="NEW"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 2"
+    title="Blog 2"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    desc="Where To Buy Good Food: 5 Top Restaurants In Lagos."
+    url="https://docs.google.com/document/d/1x23MrcRKRpb5eYg4Qy00mkvIyCbXiy408KhC5iFkpZg/edit?usp=sharing"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 3"
+    title="Blog 3"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    desc="Discover the Top 7 Mold Remediation Secrets Today!."
+    url="https://docs.google.com/document/d/1TCNyghe1v_bebkkOmTiQbRi50sRTGtcO/edit?usp=drivesdk&ouid=110127617503480490938&rtpof=true&sd=true"
     badge="FOSS"
   />
 </BaseLayout>
