--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const today = new Date();
     &copy; {today.getFullYear()} Imoh Joseph
   </div>
   <div class="inline opacity-75">
-    Developed by <a href="https://www.linkedin.com/in/imoh-joseph-849a5a328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="font-bold">Imoh Joseph</a> using
+    Developed by <a href="https://www.linkedin.com/in/imoh-joseph-849a5a328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="font-bold">Imoh Joseph</a> with love
     <!-- Thanks for using this template. You can keep this line to support my work :) -->
     <a href="https://www.linkedin.com/in/imoh-joseph-849a5a328?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app/" target="_blank" class="font-bold">Imoh Joseph ⚡️</a>
   </div>
